			 FON, QV, POL.
	Minor modification to ECSuite.java: P_... changed to V_... to be 
		consistent
	Missing closing 'bold' tag in vector documentation fixed
	Added setGenomeLength to BitVectorIndividual: it was missing
	KozaFitness.equivalentTo() and KozaFitness.betterThan() both call 
		fitness() instead of accessing fitness directly.  This puts the
		code in-line with SimpleFitness, making subclasses which 
		override the fitness() method easier to write. It's a
		little bit slower though.
	SimpleShortStatistics now outputs best individual etc. to stdout, 
		just like SimpleStatistics
	Added lots of new READMEs
	Tweak to Sum to compute the ideal fitness more properly
	Tweaks to Regression to output all elements as messages, etc.
	Document modifications to MultiPopCoevolutionaryEvaluator
	Additions to de/README
	Fixes to the documentation in es.params
	CrossoverPipeline, MutationPipeline, and InternalCrossoverPipeline 
		have their verifyPoints function made public.
	Additions to spea2/README
	Added a warning about incorrect max and min gene lengths.  This makes
		list representations a little easier.  Changes to 
		FloatVectorSpecies, IntegerVectorSpecies, and VectorSpecies
	Bug fix to RuleCrossover's crossover procedure.
	Vestigial 'num-retries' removed from SteadyStateBreeder
	Reformated the CHANGES file to fit within 80 characters
	Added BoltzmannSelection and SigmaScalingSelection, both due to
		Jack Compton <jack.compton@gmail.com>.
	Added ListCrossoverPipeline, due to Stephen Donelly <sdonnel4@gmu.edu>
	Added MultipleVectorCrossoverPipeline, due to Beenish Jamil
		<bjamil@gmu.edu>
	Added the evolve package
	Added Line and Intermediate Recombination for all integer and
		float vector individuals.  Due to William Haddon
		<whaddon@gmu.edu>
	Added random restarts to the evolve package.  Due to James O'Beirne
		<jobeirne1@gmu.edu>		
	Added distance measures to Individual and to various subclasses.  Due
		to Eric Kangas <ekangas@gmu.edu>
	Reformatted