@@ -1,3 +1,8 @@
+/*
+  Copyright 2006 by Sean Luke
+  Licensed under the Academic Free License version 3.0
+  See the file "LICENSE" for more information
+*/
 
 package ec.vector.breed;
 
